kubernetes/services/jellyseerr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
